<resources>
    <string name="app_name">CineMe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item_movies_title">Movies</string>
    <string name="menu_item_search_movies_title">Search</string>
    <string name="title_activity_cinema">CinemaActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="movie_item_poster_description">Movie picture</string>
    <string name="movies_fragment_title">Movies</string>
    <string name="search_movies_fragment_title">Search Movies</string>
    <string name="get_movies_error">Unable to load list of movies</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum id venenatis a. Est placerat in egestas erat imperdiet sed. Ut lectus arcu bibendum at varius. Purus in mollis nunc sed id semper risus in hendrerit. Volutpat est velit egestas dui. Id diam vel quam elementum pulvinar etiam non. Tristique magna sit amet purus gravida quis blandit. Gravida in fermentum et sollicitudin ac orci. Sed augue lacus viverra vitae congue eu. Sapien nec sagittis aliquam malesuada bibendum. Tortor aliquam nulla facilisi cras fermentum odio. Egestas sed tempus urna et pharetra pharetra massa. Amet purus gravida quis blandit. Orci a scelerisque purus semper eget duis at tellus.      Volutpat lacus laoreet non curabitur. Urna cursus eget nunc scelerisque viverra mauris. Turpis massa sed elementum tempus egestas sed sed risus pretium. Quam nulla porttitor massa id neque aliquam. Tempus quam pellentesque nec nam aliquam sem et. Ut eu sem integer vitae justo. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. Cras fermentum odio eu feugiat pretium nibh ipsum. Posuere morbi leo urna molestie at elementum eu facilisis sed. Augue eget arcu dictum varius duis at. Lacinia at quis risus sed vulputate odio. Massa tincidunt dui ut ornare.      Auctor augue mauris augue neque gravida in fermentum et. Varius vel pharetra vel turpis nunc eget. Condimentum mattis pellentesque id nibh tortor id aliquet. In massa tempor nec feugiat nisl pretium fusce. Dolor sed viverra ipsum nunc aliquet bibendum. Potenti nullam ac tortor vitae purus faucibus ornare suspendisse sed. Mauris a diam maecenas sed. Tortor aliquam nulla facilisi cras fermentum. Mattis rhoncus urna neque viverra. Dui sapien eget mi proin sed. In dictum non consectetur a. Eu consequat ac felis donec et odio pellentesque. Eget egestas purus viverra accumsan in nisl. Dui nunc mattis enim ut tellus elementum. Lobortis elementum nibh tellus molestie nunc non. Nisi porta lorem mollis aliquam ut porttitor leo a diam. Pulvinar mattis nunc sed blandit libero volutpat sed. Ut faucibus pulvinar elementum integer.      Scelerisque varius morbi enim nunc faucibus a pellentesque. Scelerisque in dictum non consectetur a erat nam at lectus. Sed euismod nisi porta lorem mollis aliquam. Nunc mi ipsum faucibus vitae aliquet. Nibh cras pulvinar mattis nunc. Sed viverra tellus in hac habitasse platea. Ac tortor vitae purus faucibus ornare. Laoreet sit amet cursus sit amet dictum sit amet. Risus sed vulputate odio ut enim. Massa sapien faucibus et molestie ac feugiat sed. Proin libero nunc consequat interdum varius sit amet mattis vulputate. Eget sit amet tellus cras adipiscing enim eu. Ullamcorper dignissim cras tincidunt lobortis feugiat. Arcu ac tortor dignissim convallis aenean et tortor at. Aliquet risus feugiat in ante metus. Sit amet luctus venenatis lectus magna. Egestas maecenas pharetra convallis posuere morbi leo. Auctor neque vitae tempus quam pellentesque nec nam aliquam sem.          Ac orci phasellus egestas tellus rutrum tellus. Ultrices neque ornare aenean euismod elementum nisi quis. Vel pharetra vel turpis nunc eget. Quis lectus nulla at volutpat diam ut venenatis tellus in. Egestas congue quisque egestas diam in arcu. Tincidunt praesent semper feugiat nibh sed pulvinar. Tristique senectus et netus et malesuada fames. Tristique nulla aliquet enim tortor. Aliquet nibh praesent tristique magna sit amet purus. Diam maecenas ultricies mi eget mauris pharetra et ultrices neque. Morbi tristique senectus et netus et malesuada. Venenatis tellus in metus vulputate eu scelerisque felis. Risus pretium quam vulputate dignissim suspendisse in. Ut venenatis tellus in metus vulputate. Turpis in eu mi bibendum. Pellentesque elit eget gravida cum sociis natoque. Tristique risus nec feugiat in fermentum posuere urna. Senectus et netus et malesuada fames ac turpis.</string>
    <string name="details_movie_user_text">User</string>
    <string name="details_movie_score_text">Score</string>
    <string name="details_movie_background_poster_description">Movie background poster</string>
    <string name="details_movie_poster_description">movie poster</string>
    <string name="details_movie_favorite_icon_description">movie favorite icon</string>
    <string name="detail_movies_overview_title">Overview:</string>
    <string name="detail_movies_top_cast_title">Top Cast:</string>
    <string name="details_movie_cast_item_picture">Actor picture</string>
    <string name="details_movie_user_votes_text">User votes</string>
    <string name="details_movie_user_favorite_text">Add to favorites</string>
    <string name="details_movie_favorite_description">Add to favorites icon</string>
    <string name="detail_movies_user_score_text">User score</string>
    <string name="details_movie_director_title">Directors:</string>
    <string name="details_movie_user_average_value">%d%%</string>
    <string name="details_movie_writers_title">Writers:</string>
    <string name="login_username_hint">Username...</string>
    <string name="login_password_hint">Password...</string>
    <string name="login_sign_in_text">SIGN IN</string>
    <string name="login_sign_up_hint">SIGN UP</string>
    <string name="login_sign_as_guest_text">SIGN AS GUEST</string>
    <string name="rate_movie_button_text">Rate</string>
    <string name="favorite_movie_poster_content_description">Favorite movie poster</string>
    <string name="favorite_movie_remove">Remove</string>
    <string name="favorite_movie_favorite">Favorite</string>
    <string name="movie_release_date_not_available_text">Date not available</string>
    <string name="notification_id_key">NOTIFICATION_ID</string>
    <string name="notification_title">What is coming to theaters next week!</string>
    <string name="notification_action_text">see all upcoming films</string>
    <string name="notification_text">%1$s and much more!</string>
    <string name="notification_channel_name">Upcoming Movies</string>
    <string name="activity_upcoming_movies_title">Upcoming Movies</string>
    <string name="navigation_login_title">You</string>
    <string name="search_movies_value">Search movies by title...</string>
    <string name="search_cancel_text">Cancel</string>
    <string name="search_movies_icon_description">Search movies icon</string>
    <string name="fragment_user_logout_text">Logout</string>
    <string name="fragment_log_in_title">Account</string>
    <string name="fragment_details_title">Movie Details</string>
    <string name="cancel_search_movies_icon_description">remove search title</string>
    <string name="no_data_text">No Data</string>
    <string name="shared_preferences_username_key">USERNAME</string>
    <string name="shared_preferences_key">LOGIN_PREFERENCES</string>
    <string name="remove_movie_error">Unable to remove movie</string>
    <string name="connection_error">Connection Lost</string>
    <string name="test_movie_overview">This is a test This is a test This is a test This is a test This is a test This is a test This is a test This is a test This is a test This is a test This is a test This is a test This is a test This is a test This is a test This is a test </string>
    <string name="added_to_favorites_text">Added to favorites!</string>
    <string name="removed_from_favorites_text">Removed from favorites</string>
    <string name="sign_in_error_message">You need to sign in to add to favorites.</string>
    <string name="details_movie_reviews_title">Reviews:</string>
    <string name="review_item_icon_description">Movie rate icon</string>
    <string name="review_item_content_test">"FULL SPOILER-FREE REVIEW @ https://www.msbreviews.com/movie-reviews/shang-chi-spoiler-free-review\r\n\r\n\"Shang-Chi and the Legend of the Ten Rings just became one of my absolute favorites of the entire MCU! Destin Daniel Cretton delivers an entertainment-heavy movie with arguably the best action ever seen in the cinematic universe. Through the outstanding mix of long takes, impressive fighting choreography, and jaw-dropping stunt work, Simu Liu shines with his martial arts skills, but also in tackling the identity issues of the protagonist. Marvel gains yet another emotionally compelling antagonist, as well as a relatable female character that embodies many elements of the Asian-American culture. Despite an overreliance on unnecessary, excessive exposition devices (narration, flashbacks, foreshadowing), the story behind all the tales and legends never loses interest. From the breaking of stereotypes to a remarkable depiction of their culture, most Asian viewers will certainly love this film, even more than I do. Phase Four is off to a remarkable start…\"\r\n\r\nRating: A-"</string>
    <string name="details_movie_see_all_reviews_text">SEE ALL</string>
    <string name="movie_review_author_name">by %1$s</string>
    <string name="movie_review_date">on %1$s</string>
    <string name="fragment_review_title">Reviews</string>
    <string name="fragment_overview_title">Plot Summary</string>
    <string name="movie_details">%1$s  %2$s  %3$dh %4$dm</string>
    <string name="actor_credits_description">%1$s %2$s</string>
    <string name="actor_biography"><![CDATA[Keanu Charles Reeves is a Canadian actor. Reeves is known for his roles in Bill & Ted\'s Excellent Adventure, Speed, Point Break, and The Matrix franchise as Neo. He has collaborated with major directors such as Stephen Frears (in the 1988 period drama Dangerous Liaisons); Gus Van Sant (in the 1991 independent film My Own Private Idaho); and Bernardo Bertolucci (in the 1993 film Little Buddha). Referring to his 1991 film releases, The New York Times\' critic, Janet Maslin, praised Reeves\' versatility, saying that he \"displays considerable discipline and range. He moves easily between the buttoned-down demeanor that suits a police procedural story and the loose-jointed manner of his comic roles.\" A repeated theme in roles he has portrayed is that of saving the world, including the characters of Ted Logan, Buddha, Neo, Johnny Mnemonic, John Constantine and Klaatu.]]></string>
    <string name="actor_details_birthdate_born_title">Born:</string>
    <string name="actor_details_birthdate_title">Born:</string>
    <string name="actor_details_deathdate_title">Death:</string>
    <string name="actor_details_filmography_title">Filmography</string>
    <string name="actor_details_photos_title">Photos</string>
</resources>