<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="280dp">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motion_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/movie_details_motion_layout_description"
            android:minHeight="40dp"
            app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">

            <ImageView
                android:id="@+id/details_movie_background_poster"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:alpha="0.3"
                android:contentDescription="@string/details_movie_background_poster_description"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/background_poster" />

            <ImageView
                android:id="@+id/details_movie_poster"
                android:contentDescription="@string/details_movie_poster_description"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:srcCompat="@drawable/venom" />

            <TextView
                android:id="@+id/details_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/details_movie_poster"
                app:layout_constraintTop_toTopOf="@id/details_movie_poster"
                tools:text="Venom: Let there be carnage (2021)" />

            <TextView
                android:id="@+id/details_movie_release_rate_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/details_movie_title"
                app:layout_constraintStart_toEndOf="@+id/details_movie_poster"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="PG-13 10/01/2021 (US) - 1h 37m" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/details_movie_user_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:indeterminate="false"
                android:max="100"
                app:indicatorColor="@color/track_color"
                app:indicatorDirectionCircular="clockwise"
                app:layout_constraintStart_toEndOf="@+id/details_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/details_movie_release_rate_genre"
                app:layout_constraintBottom_toBottomOf="@id/details_movie_poster"
                app:trackColor="@color/colorSecondaryDark"
                tools:progress="60" />

            <TextView
                android:id="@+id/details_movie_user_score_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/details_movie_user_score"
                app:layout_constraintEnd_toEndOf="@+id/details_movie_user_score"
                app:layout_constraintStart_toStartOf="@+id/details_movie_user_score"
                app:layout_constraintTop_toTopOf="@+id/details_movie_user_score"
                tools:text="50%" />

            <TextView
                android:id="@+id/details_movie_user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_movie_user_text"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toEndOf="@id/details_movie_user_score"
                app:layout_constraintTop_toTopOf="@id/details_movie_user_score"/>

            <TextView
                android:id="@+id/details_movie_score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_movie_score_text"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginBottom="4dp"
                app:layout_constraintStart_toEndOf="@id/details_movie_user_score"
                app:layout_constraintBottom_toBottomOf="@id/details_movie_user_score"/>

            <ImageButton
                android:id="@+id/details_movie_favorite"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/details_movie_favorite_button_background"
                android:contentDescription="@string/details_movie_favorite_icon_description"
                android:src="@drawable/movie_favorite_not_selected"
                app:layout_constraintBottom_toBottomOf="@+id/details_movie_score_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/details_movie_user_score"
                app:layout_constraintTop_toTopOf="@+id/details_movie_user_text" />
        </androidx.constraintlayout.motion.widget.MotionLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/details_movie_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail_movies_overview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/detail_movies_overview_title"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/details_movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@+id/detail_movies_overview_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="After finding a host body in investigative reporter Eddie Brock, the alien symbiote must face a new enemy, Carnage, the alter ego of serial killer Cletus Kasady." />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>