<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movie"
            type="com.merajavier.cineme.movies.MovieDataItem" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/motion_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutDescription="@xml/movie_details_motion_layout_description"
                android:minHeight="30dp"
                app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/details_movie_background_poster"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/details_movie_background_poster_description"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:showPoster="@{movie.backdropPath}"
                    tools:srcCompat="@drawable/background_poster" />

                <TextView
                    android:id="@+id/details_movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:alpha="0.8"
                    android:background="@color/colorPrimaryDark"
                    android:text="@{movie.title}"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:padding="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="Venom: Let there be carnage" />

            </androidx.constraintlayout.motion.widget.MotionLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/details_movie_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/detail_movies_overview_title"
                    style="@style/BaseTitle.Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_movies_overview_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/details_movie_overview"
                    style="@style/MovieOverview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{movie.overview}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_movies_overview_title"
                    tools:text="After finding a host body in investigative reporter Eddie Brock, the alien symbiote must face a new enemy, Carnage, the alter ego of serial killer Cletus Kasady." />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/details_movie_genres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_movie_overview"
                    tools:itemCount="3"
                    tools:listitem="@layout/details_movie_genre_chip" />

                <com.merajavier.cineme.details.UserScoreView
                    android:id="@+id/movie_details_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:showUserScore="@{movie.voteAverage}"
                    app:layout_constraintEnd_toStartOf="@+id/movie_details_add_to_favorite"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_movie_genres" />

                <com.merajavier.cineme.details.AddToFavoriteView
                    android:id="@+id/movie_details_add_to_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/movie_details_score"
                    app:layout_constraintEnd_toStartOf="@+id/movie_details_user_votes"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/movie_details_score"
                    app:layout_constraintTop_toTopOf="@id/movie_details_score" />

                <com.merajavier.cineme.details.UserVotesView
                    android:id="@+id/movie_details_user_votes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/movie_details_score"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/movie_details_add_to_favorite"
                    app:layout_constraintTop_toTopOf="@+id/movie_details_score"
                    app:showUserVotes="@{movie.voteCount}" />

                <TextView
                    android:id="@+id/detail_movies_top_cast_title"
                    style="@style/BaseTitle.Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_movies_top_cast_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movie_details_score" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/details_movie_actors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detail_movies_top_cast_title"
                    tools:itemCount="3"
                    tools:listitem="@layout/details_movie_actor_item" />

                <TextView
                    android:id="@+id/details_movie_director_title"
                    style="@style/BaseTitle.Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_movie_director_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_movie_actors" />

                <TextView
                    android:id="@+id/details_movie_director"
                    style="@style/MovieInformation.Directors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_movie_director_title"
                    tools:text="David Fincher, Lio Messi, Francella" />

                <TextView
                    android:id="@+id/details_movie_writers_title"
                    style="@style/BaseTitle.Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_movie_writers_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_movie_director" />

                <TextView
                    android:id="@+id/details_movie_writers"
                    style="@style/MovieInformation.Writers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_movie_writers_title"
                    tools:text="David Fincher, Lio Messi, Francella" />

                <TextView
                    android:id="@+id/details_movie_reviews_linebreak"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_movie_writers" />

                <TextView
                    android:id="@+id/details_movie_reviews_title"
                    style="@style/BaseTitle.Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_movie_reviews_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_movie_reviews_linebreak" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/details_movie_reviews"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_movie_reviews_title"
                    tools:itemCount="2"
                    tools:listitem="@layout/details_movie_review_item" />

                <TextView
                    android:id="@+id/details_movie_see_all_reviews"
                    style="@style/SeeAllReviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_movie_reviews" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>